[project]
name = "altparse"
version = "0.1.0"
authors = [
    {name = "Noah Keck", email="noahkeck@mindspring.com"}
]
license = {file = "LICENSE.txt"}
description = "Designed to aid in creating and maintaining AltSources"
readme = "README.md"
keywords = ["altstore", "altsource", "ios", "developer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "github3.py>=3.2.0"
]

[project.urls]
homepage = "https://github.com/noah978/AltSourceParser"
repository = "https://github.com/noah978/AltSourceParser"
issues = "https://github.com/noah978/AltSourceParser/issues"
docs = "https://github.com/noah978/AltSourceParser"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
